--- a/baojia.html
+++ b/baojia.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="css/baojia.css"/>
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
     <script src="js/jquery-1.8.0.js"></script>
+    <script src="js/header-hover.js"></script>
     <script src="js/textScroll.js"></script>
     <script src="js/index.js"></script>
     <script src="js/jisuan.js"></script>
@@ -25,8 +26,12 @@
                 <ul class="message">
                     <li>
                         <img src="images/ding.png"/>
-                        <span class="city">武汉</span>
+                        <span class="city">全国</span>
                         <span class="selec">[切换城市]</span>
+                        <div class="has-area">
+                            <ul>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         <img src="images/phone.png"/>
@@ -35,16 +40,16 @@
                 </ul>
             </div>
         </div>
-        <ul class="nav" id="nav">
-            <div class="inner clearfix">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="xinfang.html">新房装修</a></li>
-                <li><a href="laofang.html">老房翻新</a></li>
-                <li><a href="zhuhuanli.html">住户案例</a></li>
-                <li class="active"><a href="baojia.html">装修报价</a></li>
-                <li><a href="zhishi.html">装修知识</a></li>
-            </div>
-        </ul>
+        <div class="nav" id="nav">
+            <ul class="inner clearfix">
+                <li><a href="index.html">首页</a><span></span></li>
+                <li><a href="xinfang.html">新房装修</a><span></span></li>
+                <li><a href="laofang.html">老房翻新</a><span></span></li>
+                <li><a href="zhuhuanli.html">住户案例</a><span></span></li>
+                <li class="active"><a href="baojia.html">装修报价</a><span></span></li>
+                <li><a href="zhishi.html">装修知识</a><span></span></li>
+            </ul>
+        </div>
     </div>
     <!--banner-->
     <div class="banner"></div>
@@ -56,15 +61,27 @@
                 <div class="left-form">
                     <label class="clearfix">
                         <span class="txt">所在地区：</span>
-                        <!--<input type="number"/>-->
                         <div class="quyu"><span>武汉</span></div>
                         <div class="select_box">
                             <ul>
                                 <li>武汉</li>
                                 <li>长沙</li>
                                 <li>郑州</li>
-                                <li>西安</li>
                                 <li>合肥</li>
+                                <li>北京</li>
+                                <li>天津</li>
+                                <li>石家庄</li>
+                                <li>上海</li>
+                                <li>南京</li>
+                                <li>杭州</li>
+                                <li>苏州</li>
+                                <li>广州</li>
+                                <li>深圳</li>
+                                <li>佛山</li>
+                                <li>福州</li>
+                                <li>四川</li>
+                                <li>重庆</li>
+                                <li>南昌</li>
                             </ul>
                         </div>
                     </label>
@@ -336,9 +353,17 @@
                         <span></span>
                         <input type="text" placeholder="请输入您的手机号" maxlength="11" id="BJnumber"/>
                     </label>
-                    <label class="clearfix">
+                    <!--<label class="clearfix">
                         <input type="text" placeholder="请输入验证号码" id="BJrandnum"/>
                         <button type="button" class="yanzheng">验证号码</button>
+                    </label>-->
+                    <label class="clearfix BJ-quyu">
+                        <img src="images/baojia-ico4.png"/>
+                        <span></span>
+                        <div id="BJ-area" class="input">全国</div>
+                        <ul class="select-quyu">
+                            <li>全国</li>
+                        </ul>
                     </label>
                     <button type="button" class="jisuan" id="liji-baojia">立即报价</button>
                     <a href="#" class="zixun">详情咨询客服报价>></a>
@@ -346,16 +371,6 @@
             </form>
             <div class="people" id="people">
                 <div class="thead">累计已有<strong>5435</strong>位业主报价成功</div>
-                <!--<marquee direction="up" scrollamount="5" class="p-scroll">
-                    <table>
-                        <tbody>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        </tbody>
-                    </table>
-                </marquee>-->
                 <div class="people-cont" id="people-cont">
                     <ul>
                         <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
@@ -422,7 +437,7 @@
     $(function() {
         $('#people-cont').vTicker({
             speed: 500,
-            pause: 800,
+            pause: 2000,
             animation: 'fade',
             mousePause: true,
             showItems:4
