--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <link type="text/css" rel="stylesheet" href="css/index.css"/>
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
     <link type="text/css" rel="stylesheet" href="css/jisuanqiNew.css"/>
+    <link type="text/css" rel="stylesheet" href="css/animate.css"/>
+    <link type="text/css" rel="stylesheet" href="css/animation.css"/>
     <script src="js/jquery-1.8.0.js"></script>
     <!--<script src="js/swiper.min.js"></script>-->
     <script src="js/swiper.jquery.min.js"></script>
-    <!--<script src="js/scroll.js"></script>-->
-    <!--<script src="js/scrollText.js"></script>-->
+    <script src="js/header-hover.js"></script>
     <script src="js/textScroll.js"></script>
     <script src="js/index.js"></script>
     <script src="js/popup.js"></script>
+    <script src="js/scroll_animation.js"></script>
 </head>
 <body>
     <!--header-->
@@ -33,8 +35,12 @@
                 <ul class="message">
                     <li>
                         <img src="images/ding.png"/>
-                        <span class="city">武汉</span>
+                        <span class="city">全国</span>
                         <span class="selec">[切换城市]</span>
+                        <div class="has-area">
+                            <ul>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         <img src="images/phone.png"/>
@@ -43,16 +49,16 @@
                 </ul>
             </div>
         </div>
-        <ul class="nav" id="nav">
-            <div class="inner clearfix">
-                <li class="active"><a href="index.html">首页</a></li>
-                <li><a href="xinfang.html">新房装修</a></li>
-                <li><a href="laofang.html">老房翻新</a></li>
-                <li><a href="zhuhuanli.html">住户案例</a></li>
-                <li><a href="baojia.html">装修报价</a></li>
-                <li><a href="zhishi.html">装修知识</a></li>
-            </div>
-        </ul>
+        <div class="nav" id="nav">
+            <ul class="inner clearfix">
+                <li class="active"><a href="index.html">首页</a><span></span></li>
+                <li><a href="xinfang.html">新房装修</a><span></span></li>
+                <li><a href="laofang.html">老房翻新</a><span></span></li>
+                <li><a href="zhuhuanli.html">住户案例</a><span></span></li>
+                <li><a href="baojia.html">装修报价</a><span></span></li>
+                <li><a href="zhishi.html">装修知识</a><span></span></li>
+            </ul>
+        </div>
     </div>
     <!--banner-->
     <div class="swiper-container banner" id="banner">
@@ -66,29 +72,29 @@
         <div class="swiper-pagination"></div>
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <!--<img src="images/banner2.jpg"/>-->
-    </div>
+        <div class="swiper-button-prev"></div>    </div>
     <!--banner IE9以下浏览器-->
-    <!--[if lt IE 9]>
-    <style>
-        #banner{display:none;}
-    </style>
-    <div class="bannerIE clearfix center" id="bannerIE">
-        <ul class="banner-ul clearfix" id="banner-ul">
-            <li class="li li1"><a href="zhuhuanli.html"></a></li>
-            <li class="li li2"><a href="baojia.html"></a></li>
-            <li class="li li3"><a href="zhishi.html"></a></li>
-        </ul>
-        <span class="preBtn" id="preBtn">〈</span>
-        <span class="nextBtn" id="nextBtn">〉</span>
-        <ol class="banner-ol" id="banner-ol"></ol>
+    <div class="IE8">
+        <!--[if lt IE 9]>
+        <style>
+            #banner{display:none;}
+        </style>
+        <div class="bannerIE clearfix center" id="bannerIE">
+            <ul class="banner-ul clearfix" id="banner-ul">
+                <li class="li li1"><a href="zhuhuanli.html"></a></li>
+                <li class="li li2"><a href="baojia.html"></a></li>
+                <li class="li li3"><a href="zhishi.html"></a></li>
+            </ul>
+            <span class="preBtn" id="preBtn">〈</span>
+            <span class="nextBtn" id="nextBtn">〉</span>
+            <ol class="banner-ol" id="banner-ol"></ol>
+        </div>
+        <script src="js/tools.js"></script>
+        <script src="js/banner-ie.js"></script>
+        <![endif]-->
     </div>
-    <script src="js/tools.js"></script>
-    <script src="js/banner-ie.js"></script>
-    <![endif]-->
     <!--好礼-->
-    <div class="haoli">
+    <div class="haoli animated fadeInUp  pt-page-delay500" id="haoli">
         <div class="inner">
             <div class="page-title">
                 <h3>官网专享好礼HIGH送</h3>
@@ -96,29 +102,29 @@
                 <p>EXCLSIVE OFFICIAL WEBSITE</p>
             </div>
             <ul class="picText clearfix">
-                <li>
+                <li class="animated fadeInUp pt-page-delay700">
                     <div class="img">
                         <img src="images/haoli-img_03.png"/>
                     </div>
                     <h5>1000元装修抵用券</h5>
                     <div class="line"></div>
-                    <a href="#" class="liji">立即领取</a>
+                    <span class="liji">立即领取</span>
                 </li>
-                <li>
+                <li class="animated fadeInUp pt-page-delay900">
                     <div class="img">
                         <img src="images/haoli-img_05.png"/>
                     </div>
                     <h5>装修管家特权</h5>
                     <div class="line"></div>
-                    <a href="#" class="liji">立即咨询</a>
+                    <span class="liji">立即领取</span>
                 </li>
-                <li>
+                <li class="animated fadeInUp pt-page-delay1000">
                     <div class="img">
                         <img src="images/haoli-img_07.png"/>
                     </div>
                     <h5>有家，有礼  才够完美</h5>
                     <div class="line"></div>
-                    <a href="#" class="liji">立即咨询</a>
+                    <span class="liji">立即领取</span>
                 </li>
             </ul>
         </div>
@@ -176,9 +182,6 @@
     </div>
     <!--专享-->
     <div class="zhuanxiang">
-        <!--<div class="zx-bg">
-            <img src="images/zhuanxiang-bg.png"/>
-        </div>-->
         <div class="wraper">
             <img src="images/logo.png" alt=""/>
             <h2>从心出发 打造专享家居品牌</h2>
@@ -192,7 +195,7 @@
                 <h3>专业报价</h3>
                 <p>●  24小时出平面方案</p>
             </div>
-            <form class="cont clearfix">
+            <form class="cont">
                 <ul class="select" id="select-xinjiu">
                     <li class="active xin_wrap">
                         <span id="baojia_xin"></span>
@@ -219,25 +222,23 @@
                         <span></span>
                         <input type="text" placeholder="请输入您的手机号" maxlength="11" id="BJnumber"/>
                     </label>
-                    <label class="clearfix">
+                    <!--<label class="clearfix">
                         <input type="text" placeholder="请输入验证号码" id="BJrandnum"/>
                         <button type="button" class="yanzheng">验证号码</button>
+                    </label>-->
+                    <label class="clearfix BJ-quyu">
+                        <img src="images/baojia-ico4.png"/>
+                        <span></span>
+                        <div id="BJ-area" class="input">全国</div>
+                            <ul class="select-quyu">
+                                <li>全国</li>
+                            </ul>
                     </label>
                     <button type="button" class="jisuan" id="liji-baojia">立即报价</button>
                 </div>
             </form>
             <div class="people" id="people">
                 <div class="thead">累计已有<strong>5435</strong>位业主报价成功</div>
-                <!--<marquee direction="up" scrollamount="4" class="marquee" id="marquee-wrap">
-                    <table id="people-marquee">
-                       &lt;!&ndash; <tbody>&ndash;&gt;
-                            <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                            <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                            <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                            <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        &lt;!&ndash;</tbody>&ndash;&gt;
-                    </table>
-                </marquee>-->
                 <div class="people-cont" id="people-cont">
                     <ul>
                         <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
@@ -396,34 +397,40 @@
             </div>
             <ul class="cont clearfix">
                 <li>
-                    <div class="img">
-                        <img src="images/anli-img_03.png"/>
-                        <div class="light-box"></div>
-                    </div>
-                    <h4><a href="#">北辰国际</a></h4>
-                    <div class="line"></div>
-                    <h6>两居室|89㎡</h6>
-                    <p>还原理想的原木之家</p>
+                    <a href="xiangqing.html">
+                        <div class="img">
+                            <img src="images/anli-img_03.png"/>
+                            <div class="light-box"></div>
+                        </div>
+                        <h4><a href="xiangqing.html">北辰国际</a></h4>
+                        <div class="line"></div>
+                        <h6>两居室|89㎡</h6>
+                        <p>还原理想的原木之家</p>
+                    </a>
                 </li>
                 <li>
-                    <div class="img">
-                        <img src="images/anli-img_05.png"/>
-                        <div class="light-box"></div>
-                    </div>
-                    <h4><a href="#">东湖复地一号</a></h4>
-                    <div class="line"></div>
-                    <h6>三居室|120㎡</h6>
-                    <p>素白纯洁的慢时光</p>
+                    <a href="xiangqing.html">
+                        <div class="img">
+                            <img src="images/anli-img_05.png"/>
+                            <div class="light-box"></div>
+                        </div>
+                        <h4><a href="xiangqing.html">东湖复地一号</a></h4>
+                        <div class="line"></div>
+                        <h6>三居室|120㎡</h6>
+                        <p>素白纯洁的慢时光</p>
+                    </a>
                 </li>
                 <li>
-                    <div class="img">
-                        <img src="images/anli-img_08.png"/>
-                        <div class="light-box"></div>
-                    </div>
-                    <h4><a href="#">百瑞景</a></h4>
-                    <div class="line"></div>
-                    <h6>一居室|65㎡</h6>
-                    <p>小户型装出大风尚</p>
+                    <a href="xiangqing.html">
+                        <div class="img">
+                            <img src="images/anli-img_08.png"/>
+                            <div class="light-box"></div>
+                        </div>
+                        <h4><a href="xiangqing.html">百瑞景</a></h4>
+                        <div class="line"></div>
+                        <h6>一居室|65㎡</h6>
+                        <p>小户型装出大风尚</p>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -529,7 +536,7 @@
         <div class="inner .clearfix">
             <div class="JSQtitle">
                 <div class="left">
-                    <img src="images/img/title.png" alt=""/>
+                    <img src="images/img/title1.png" alt=""/>
                 </div>
                 <div class="goTop"></div>
                 <div class="goBot"></div>
@@ -541,27 +548,45 @@
         </div>
     </div>
 
-    <!--IE8以下浏览器提示-->
-    <!--[if lt IE 8]>
-    <!--<style type="text/css">
-        #ie{display:block;}     /*对IE显示特定模块*/
-        .header,.banner,.haoli,.jiaju,.fangan,.zhuanxiang,.baojia,.pingpai,.gongyi,.anli,.liucheng,.footer,.bottom,.jisuanqi{display:none;}
-    </style>
-    <div id="ie">
-        <div id="ie-body">
-            <br /><br />
-            <center>
-                <p><br /><br /><br />欢迎光临极享家</p>
-                <p>您正在使用一个落后的浏览器浏览网页</p>
-                <p>本站无法在 IE 8 以下版本的 IE 系列浏览器中正常访问。</p>
-                <p>为了获得更好的浏览体验, 请升级到更高级的浏览器，或转换到另一些浏览器，本站将能为您提供更好的服务。</p>
-                <p>本站推荐使用以下浏览器：Firefox, Chrome, Opera, Safari </p>
-                <p>您也可以直接移步到极享家官网www.54jxj.com</p>
-                <p><br>Copyright &copy; 2017. 极享家 . All Rights Reserved.</p>
-            </center>
-        </div>
-    </div>-->
+    <!--模态框背景-->
+    <div class="modal-bg" id="modal-bg"></div>
+    <!--模态框-->
+    <form class="modal" id="modal" action="/home/" method="post">
+        <img src="images/logo.png"/>
+        <input type="text" placeholder="请输入您的称呼" value="请输入您的称呼" maxlength="6" id="lingqu-name"/>
+        <input type="text" placeholder="请输入您的手机号" value="请输入您的手机号" maxlength="11" id="lingqu-number"/>
+        <button type="button" id="ling">立即领取</button>
+        <span class="close-btn" id="close">Ｘ</span>
+    </form>
+    <!--IE9 以下 模态框-->
+    <!--[if lt IE 9]>
+        <style>
+            #modal{display:none;border:5px solid #000;}
+        </style>
     <![endif]-->
+    <!--IE8以下浏览器提示-->
+    <div class="IE7">
+        <!--[if lt IE 8]>
+        <style type="text/css">
+            /*#ie{display:block;}*/     /*对IE显示特定模块*/
+            /*.header,.banner,.haoli,.jiaju,.fangan,.zhuanxiang,.baojia,.pingpai,.gongyi,.anli,.liucheng,.footer,.bottom,.jisuanqi{display:none;}*/
+        </style>
+        <div id="ie">
+            <div id="ie-body">
+                <br /><br />
+                <center>
+                    <p><br /><br /><br />欢迎光临极享家</p>
+                    <p>您正在使用一个落后的浏览器浏览网页</p>
+                    <p>本站无法在 IE 8 以下版本的 IE 系列浏览器中正常访问。</p>
+                    <p>为了获得更好的浏览体验, 请升级到更高级的浏览器，或转换到另一些浏览器，本站将能为您提供更好的服务。</p>
+                    <p>本站推荐使用以下浏览器：Firefox, Chrome, Opera, Safari </p>
+                    <p>您也可以直接移步到极享家官网www.54jxj.com</p>
+                    <p><br>Copyright &copy; 2017. 极享家 . All Rights Reserved.</p>
+                </center>
+            </div>
+        </div>
+        <![endif]-->
+    </div>
 </body>
 <!-- Initialize Swiper -->
 <script>
@@ -597,11 +622,13 @@
     $(function() {
         $('#people-cont').vTicker({
             speed: 500,
-            pause: 800,
+            pause: 2000,
             animation: 'fade',
             mousePause: true,
-            showItems:4
+            showItems:4,
+            direction:"up"
         });
     });
 </script>
+
 </html>
