--- a/laofang.html
+++ b/laofang.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="css/laofang.css"/>
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
     <script src="js/jquery-1.8.0.js"></script>
-    <!--<script src="js/swiper.min.js"></script>-->
+    <script src="js/header-hover.js"></script>
     <script src="js/textScroll.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
     <script src="js/index.js"></script>
@@ -27,8 +27,12 @@
             <ul class="message">
                 <li>
                     <img src="images/ding.png"/>
-                    <span class="city">武汉</span>
+                    <span class="city">全国</span>
                     <span class="selec">[切换城市]</span>
+                    <div class="has-area">
+                        <ul>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <img src="images/phone.png"/>
@@ -37,16 +41,16 @@
             </ul>
         </div>
     </div>
-    <ul class="nav" id="nav">
-        <div class="inner clearfix">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="xinfang.html">新房装修</a></li>
-            <li class="active"><a href="laofang.html">老房翻新</a></li>
-            <li><a href="zhuhuanli.html">住户案例</a></li>
-            <li><a href="baojia.html">装修报价</a></li>
-            <li><a href="zhishi.html">装修知识</a></li>
-        </div>
-    </ul>
+    <div class="nav" id="nav">
+        <ul class="inner clearfix">
+            <li><a href="index.html">首页</a><span></span></li>
+            <li><a href="xinfang.html">新房装修</a><span></span></li>
+            <li class="active"><a href="laofang.html">老房翻新</a><span></span></li>
+            <li><a href="zhuhuanli.html">住户案例</a><span></span></li>
+            <li><a href="baojia.html">装修报价</a><span></span></li>
+            <li><a href="zhishi.html">装修知识</a><span></span></li>
+        </ul>
+    </div>
 </div>
 <!--banner-->
 <div class="banner"></div>
@@ -362,7 +366,7 @@
     </div>
 </div>
 <!--报价-->
-<div class="baojia" id="baojia">
+<!--<div class="baojia" id="baojia">
     <div class="inner clearfix">
         <div class="txt">
             <img src="images/xinfang-baodan-img_03.png" alt="">
@@ -396,9 +400,18 @@
                     <span></span>
                     <input type="text" placeholder="请输入您的手机号" maxlength="11" id="BJnumber"/>
                 </label>
-                <label class="clearfix">
+                &lt;!&ndash;<label class="clearfix">
                     <input type="text" placeholder="请输入验证号码" id="BJrandnum"/>
                     <button type="button" class="yanzheng">验证号码</button>
+                </label>&ndash;&gt;
+                <label class="clearfix BJ-quyu">
+                    <img src="images/baojia-ico4.png"/>
+                    <span></span>
+                    &lt;!&ndash;<input type="text" id="BJ-area" value="武昌区"  readonly="readonly" placeholder="武昌区"/>&ndash;&gt;
+                    <div id="BJ-area" class="input">全国</div>
+                    <ul class="select-quyu">
+                        <li data-value="全国">全国</li>
+                    </ul>
                 </label>
                 <button type="button" class="jisuan" id="liji-baojia">立即报价</button>
                 <a href="#" class="zixun">详情咨询客服报价>></a>
@@ -406,16 +419,71 @@
         </form>
         <div class="people" id="people">
             <div class="thead">累计已有<strong>5435</strong>位业主报价成功</div>
-            <!--<marquee direction="up" scrollamount="5" class="p-scroll">
-                <table>
-                    <tbody>
-                    <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                    <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                    <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                    <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                    </tbody>
-                </table>
-            </marquee>-->
+            <div class="people-cont" id="people-cont">
+                <ul>
+                    <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
+                    <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
+                    <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
+                    <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>-->
+<!--报价-->
+<div class="baojia" id="baojia">
+    <div class="inner clearfix">
+        <div class="txt">
+            <img src="images/xinfang-baodan-img_03.png" alt="">
+            <h3>专业量房报价</h3>
+            <p>算算我家装修多少钱？</p>
+        </div>
+        <form class="cont clearfix">
+            <ul class="select" id="select-xinjiu">
+                <li class="active xin_wrap">
+                    <span id="baojia_xin"></span>
+                    <h6>新房</h6>
+                </li>
+                <li class="jiu_wrap">
+                    <span id="baojia_jiu"></span>
+                    <h6>旧房</h6>
+                </li>
+            </ul>
+            <div class="right">
+                <label class="clearfix">
+                    <img src="images/baojia-ico1.png"/>
+                    <span></span>
+                    <input type="text" placeholder="请输入您的房屋面积" maxlength="4" id="BJmianji"/>
+                </label>
+                <label class="clearfix">
+                    <img src="images/baojia-ico2.png"/>
+                    <span></span>
+                    <input type="text" placeholder="请输入您的称呼" maxlength="6" id="BJname"/>
+                </label>
+                <label class="clearfix">
+                    <img src="images/baojia-ico3.png"/>
+                    <span></span>
+                    <input type="text" placeholder="请输入您的手机号" maxlength="11" id="BJnumber"/>
+                </label>
+                <!--<label class="clearfix">
+                    <input type="text" placeholder="请输入验证号码" id="BJrandnum"/>
+                    <button type="button" class="yanzheng">验证号码</button>
+                </label>-->
+                <label class="clearfix BJ-quyu">
+                    <img src="images/baojia-ico4.png"/>
+                    <span></span>
+                    <div id="BJ-area" class="input">全国</div>
+                    <ul class="select-quyu">
+                        <li data-value="全国">全国</li>
+                    </ul>
+                </label>
+
+                <button type="button" class="jisuan" id="liji-baojia">立即报价</button>
+                <a href="#" class="zixun">详情咨询客服报价>></a>
+            </div>
+        </form>
+        <div class="people" id="people">
+            <div class="thead">累计已有<strong>5435</strong>位业主报价成功</div>
             <div class="people-cont" id="people-cont">
                 <ul>
                     <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
@@ -495,7 +563,7 @@
     $(function() {
         $('#people-cont').vTicker({
             speed: 500,
-            pause: 800,
+            pause: 2000,
             animation: 'fade',
             mousePause: true,
             showItems:4
