--- a/xiangqing.html
+++ b/xiangqing.html
@@ -11,8 +11,9 @@
     <link type="text/css" rel="stylesheet" href="css/xiangqing.css"/>
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
     <script src="js/jquery-1.8.0.js"></script>
-    <!--<script src="js/swiper.min.js"></script>-->
+    <script src="js/header-hover.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/xiangqing.js"></script>
 </head>
 <body>
@@ -26,8 +27,12 @@
             <ul class="message">
                 <li>
                     <img src="images/ding.png"/>
-                    <span class="city">武汉</span>
+                    <span class="city">全国</span>
                     <span class="selec">[切换城市]</span>
+                    <div class="has-area">
+                        <ul>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <img src="images/phone.png"/>
@@ -36,16 +41,16 @@
             </ul>
         </div>
     </div>
-    <ul class="nav" id="nav">
-        <div class="inner clearfix">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="xinfang.html">新房装修</a></li>
-            <li><a href="laofang.html">老房翻新</a></li>
-            <li class="active"><a href="zhuhuanli.html">住户案例</a></li>
-            <li><a href="baojia.html">装修报价</a></li>
-            <li><a href="zhishi.html">装修知识</a></li>
-        </div>
-    </ul>
+    <div class="nav" id="nav">
+        <ul class="inner clearfix">
+            <li><a href="index.html">首页</a><span></span></li>
+            <li><a href="xinfang.html">新房装修</a><span></span></li>
+            <li><a href="laofang.html">老房翻新</a><span></span></li>
+            <li class="active"><a href="zhuhuanli.html">住户案例</a><span></span></li>
+            <li><a href="baojia.html">装修报价</a><span></span></li>
+            <li><a href="zhishi.html">装修知识</a><span></span></li>
+        </ul>
+    </div>
 </div>
 <!--banner-->
 <div class="banner"></div>
@@ -112,7 +117,7 @@
     <div class="inner">
         <div class="anli-title clearfix">
             <h5>GEEKS+更多美家案例</h5>
-            <a href="#" class="geng">更多案例</a>
+            <a href="zhuhuanli.html" class="geng">更多案例</a>
         </div>
         <div class="swiper-container cont">
             <!--swiper wraper-->
