--- a/xinfang.html
+++ b/xinfang.html
@@ -8,12 +8,11 @@
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <link type="text/css" rel="stylesheet" href="css/header.css"/>
     <link type="text/css" rel="stylesheet" href="css/swiper.min.css"/>
+    <link type="text/css" rel="stylesheet" href="css/baojia-square.css"/>
     <link type="text/css" rel="stylesheet" href="css/xinfang.css"/>
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
-    <link type="text/css" rel="stylesheet" href="css/meta-ie8.css"/>
     <script src="js/jquery-1.8.0.js"></script>
-    <!--<script src="js/jquery-3.0.0.min.js"></script>-->
-    <!--<script src="js/swiper.min.js"></script>-->
+    <script src="js/header-hover.js"></script>
     <script src="js/textScroll.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
     <script src="js/index.js"></script>
@@ -31,8 +30,12 @@
                 <ul class="message">
                     <li>
                         <img src="images/ding.png"/>
-                        <span class="city">武汉</span>
+                        <span class="city">全国</span>
                         <span class="selec">[切换城市]</span>
+                        <div class="has-area">
+                            <ul>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         <img src="images/phone.png"/>
@@ -41,16 +44,16 @@
                 </ul>
             </div>
         </div>
-        <ul class="nav" id="nav">
-            <div class="inner clearfix">
-                <li><a href="index.html">首页</a></li>
-                <li class="active"><a href="xinfang.html">新房装修</a></li>
-                <li><a href="laofang.html">老房翻新</a></li>
-                <li><a href="zhuhuanli.html">住户案例</a></li>
-                <li><a href="baojia.html">装修报价</a></li>
-                <li><a href="zhishi.html">装修知识</a></li>
-            </div>
-        </ul>
+        <div class="nav" id="nav">
+            <ul class="inner clearfix">
+                <li><a href="index.html">首页</a><span></span></li>
+                <li class="active"><a href="xinfang.html">新房装修</a><span></span></li>
+                <li><a href="laofang.html">老房翻新</a><span></span></li>
+                <li><a href="zhuhuanli.html">住户案例</a><span></span></li>
+                <li><a href="baojia.html">装修报价</a><span></span></li>
+                <li><a href="zhishi.html">装修知识</a><span></span></li>
+            </ul>
+        </div>
     </div>
     <!--banner-->
     <div class="swiper-container" id="banner">
@@ -121,26 +124,25 @@
                         <span></span>
                         <input type="text" placeholder="请输入您的手机号" maxlength="11" id="BJnumber"/>
                     </label>
-                    <label class="clearfix">
+                    <!--<label class="clearfix">
                         <input type="text" placeholder="请输入验证号码" id="BJrandnum"/>
                         <button type="button" class="yanzheng">验证号码</button>
+                    </label>-->
+                    <label class="clearfix BJ-quyu">
+                        <img src="images/baojia-ico4.png"/>
+                        <span></span>
+                        <div id="BJ-area" class="input">全国</div>
+                        <ul class="select-quyu">
+                            <li data-value="全国">全国</li>
+                        </ul>
                     </label>
+
                     <button type="button" class="jisuan" id="liji-baojia">立即报价</button>
                     <a href="#" class="zixun">详情咨询客服报价>></a>
                 </div>
             </form>
             <div class="people" id="people">
                 <div class="thead">累计已有<strong>5435</strong>位业主报价成功</div>
-                <!--<marquee direction="up" scrollamount="5" class="p-scroll">
-                    <table>
-                        <tbody>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        <tr><td>段**</td><td>181****2456</td><td>预约成功</td></tr>
-                        </tbody>
-                    </table>
-                </marquee>-->
                 <div class="people-cont" id="people-cont">
                     <ul>
                         <li><span>段**</span><span>181****2456</span><span>预约成功</span></li>
@@ -292,27 +294,22 @@
                 <li>
                     <img src="images/xinfang-quanmian-img_1.png">
                     <h5>免材上楼费</h5>
-                    <!--<div class="line"></div>-->
                 </li>
                 <li>
                     <img src="images/xinfang-quanmian-img_2.png">
                     <h5>免墙漆调色费</h5>
-                    <!--<div class="line"></div>-->
                 </li>
                 <li>
                     <img src="images/xinfang-quanmian-img_3.png">
                     <h5>免垃圾清运费</h5>
-                    <!--<div class="line"></div>-->
                 </li>
                 <li>
                     <img src="images/xinfang-quanmian-img_09.png">
                     <h5>免成品保护费</h5>
-                    <!--<div class="line"></div>-->
                 </li>
                 <li>
                     <img src="images/xinfang-quanmian-img_11.png">
                     <h5>免运输费</h5>
-                    <!--<div class="line"></div>-->
                 </li>
                 <li>
                     <img src="images/xinfang-quanmian-img_13.png">
@@ -417,7 +414,7 @@
     <div class="tuandui">
         <div class="inner">
             <div class="page-title">
-                <h3>十大标准施工工艺</h3>
+                <h3>自由金牌施工团队</h3>
                 <div class="line"></div>
                 <p>EXCLSIVE OFFICIAL WEBSITE</p>
             </div>
@@ -615,7 +612,7 @@
     $(function() {
         $('#people-cont').vTicker({
             speed: 500,
-            pause: 800,
+            pause: 2000,
             animation: 'fade',
             mousePause: true,
             showItems:4
