--- a/zhuhuanli.html
+++ b/zhuhuanli.html
@@ -10,6 +10,8 @@
     <link type="text/css" rel="stylesheet" href="css/zhuhuanli.css">
     <link type="text/css" rel="stylesheet" href="css/footer.css"/>
     <script src="js/jquery-1.8.0.js"></script>
+    <script src="js/header-hover.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/anli.js"></script>
 </head>
 <body>
@@ -23,8 +25,12 @@
                 <ul class="message">
                     <li>
                         <img src="images/ding.png"/>
-                        <span class="city">武汉</span>
+                        <span class="city">全国</span>
                         <span class="selec">[切换城市]</span>
+                        <div class="has-area">
+                            <ul>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         <img src="images/phone.png"/>
@@ -33,21 +39,19 @@
                 </ul>
             </div>
         </div>
-        <ul class="nav" id="nav">
-            <div class="inner clearfix">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="xinfang.html">新房装修</a></li>
-                <li><a href="laofang.html">老房翻新</a></li>
-                <li class="active"><a href="zhuhuanli.html">住户案例</a></li>
-                <li><a href="baojia.html">装修报价</a></li>
-                <li><a href="zhishi.html">装修知识</a></li>
-            </div>
-        </ul>
+        <div class="nav" id="nav">
+            <ul class="inner clearfix">
+                <li><a href="index.html">首页</a><span></span></li>
+                <li><a href="xinfang.html">新房装修</a><span></span></li>
+                <li><a href="laofang.html">老房翻新</a><span></span></li>
+                <li class="active"><a href="zhuhuanli.html">住户案例</a><span></span></li>
+                <li><a href="baojia.html">装修报价</a><span></span></li>
+                <li><a href="zhishi.html">装修知识</a><span></span></li>
+            </ul>
+        </div>
     </div>
     <!--banner-->
-    <div class="banner">
-        <!--<img src="images/banner2.jpg"/>-->
-    </div>
+    <div class="banner"></div>
     <!--anli-nav-->
     <div class="anli-nav">
         <div class="inner">
@@ -72,132 +76,213 @@
                 </li>
             </ul>
             <div class="content-wrap clearfix">
-                <ul class="cont clearfix" id="cont1">
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_03.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_04.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_08.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_03.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_04.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_08.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                </ul>
-                <ul class="cont clearfix" id="cont2">
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_04.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_03.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_03.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_08.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_04.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                    <li>
-                        <div class="img">
-                            <img src="images/zhuhuanli-img_08.png"/>
-                            <div class="light-box"></div>
-                        </div>
-                        <h4><a href="#">江与城</a></h4>
-                        <div class="line"></div>
-                        <h6>一居室|47㎡</h6>
-                        <p>47㎡小公寓多出30㎡收纳空间</p>
-                    </li>
-                </ul>
+                <div class="cont-wrap" id="an-cont1">
+                    <ul class="cont clearfix" id="cont1">
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_08.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_08.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="hide-ul clearfix">
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="geng">查看更多</span>
+                </div>
+                <div class="cont-wrap" id="an-cont2">
+                    <ul class="cont clearfix" id="cont2">
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_08.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_08.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="hide-ul clearfix">
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_04.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="xiangqing.html">
+                                <div class="img">
+                                    <img src="images/zhuhuanli-img_03.png"/>
+                                    <div class="light-box"></div>
+                                </div>
+                                <h4><a href="xiangqing.html">江与城</a></h4>
+                                <div class="line"></div>
+                                <h6>一居室|47㎡</h6>
+                                <p>47㎡小公寓多出30㎡收纳空间</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <span class="geng">查看更多</span>
+                </div>
             </div>
-            <a href="xiangqing.html" class="geng">查看更多</a>
         </div>
     </div>
     <!--承诺-->
